# tauri-examples

./: README.md
create-multiple-windows/: package-lock.json  package.json
create-multiple-windows/config/: env-vars.js  paths.js  webpack.base.js  webpack.dev.js  webpack.prod.js
create-multiple-windows/public/: index.html  manifest.json  splash.html
create-multiple-windows/src/: Main.css  Main.tsx  Splash.scss  Splash.tsx  main-index.tsx  splash-index.tsx
create-multiple-windows/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
create-multiple-windows/src-tauri/src/: cmds.rs  main.rs
create-webview-window/: package-lock.json  package.json
create-webview-window/public/: index.html
create-webview-window/src/: App.tsx
create-webview-window/src-tauri/: Cargo.toml  tauri.conf.json
create-webview-window/src-tauri/src/: cmds.rs  main.rs
custom-titlebar/: package-lock.json  package.json
custom-titlebar/config/: webpackDevServer.config.js
custom-titlebar/src-tauri/: Cargo.toml  tauri.conf.json
custom-titlebar/src-tauri/src/: main.rs
from-rust-to-webview/: package-lock.json  package.json
from-rust-to-webview/src/: App.css  App.jsx
from-rust-to-webview/src-tauri/: Cargo.toml  tauri.conf.json
from-rust-to-webview/src-tauri/src/: main.rs  plugin.rs
fullscreen/: package-lock.json  package.json
fullscreen/src-tauri/: Cargo.toml  log4rs.yaml  tauri.conf.json
fullscreen/src-tauri/src/: main.rs
global-shortcut/: package-lock.json  package.json
global-shortcut/src/: App.tsx  index.d.ts
global-shortcut/src-tauri/: Cargo.toml  tauri.conf.json
