[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { git = "https://github.com/tauri-apps/tauri.git", branch = "dev", features = [] }

[dependencies]
once_cell = "1.15.0"
chrono = "0.4.22"
futures = "0.3.25"
serde_json = "1.0.87"
serde = { version = "1.0.147", features = ["derive"] }
tauri = { git = "https://github.com/tauri-apps/tauri.git", branch = "dev", features = ["api-all", "macos-private-api"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
