[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {  git = "https://github.com/tauri-apps/tauri.git", branch = "dev", features = [] }

[dependencies]
chrono = "0.4.19"
futures = "0.3.21"
serde_json = "1.0.79"
serde = { version = "1.0.136", features = ["derive"] }
tauri = { git = "https://github.com/tauri-apps/tauri.git", branch = "dev", features = ["dialog-all", "fs-all", "macos-private-api", "path-all", "process-exit", "process-relaunch", "shell-open", "window-all"] }


[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
